# crucible

./: .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  MANIFESTO.md  README.md  code_guide.md  code_rules.md  prof.sh
bench/: CMakeLists.txt  README.md  aten_hash_table.py  bench_adaptive_scheduler.cpp  bench_arena.cpp  bench_augur_metrics_swmr.cpp  bench_auto_router.cpp  bench_auto_split.cpp  bench_auto_split_compare.cpp  bench_chainedge_session.cpp  bench_chaselev_session.cpp  bench_cipher.cpp  bench_ckernel.cpp  bench_concurrent_queues.cpp  bench_concurrent_saturation.cpp  bench_content_hash.cpp  bench_decide_compile_time.cpp  bench_diag_emission.cpp  bench_dispatch.cpp  bench_expr_pool.cpp  bench_fusion.cpp  bench_graph.cpp  bench_harness.h  bench_iteration_detector.cpp  bench_kernel_cache.cpp  bench_merkle_dag.cpp  bench_meta_log.cpp  bench_metalog_session.cpp  bench_mpmc_saturation.cpp  bench_mpmc_scq_vs_vyukov.cpp  bench_mpsc_contention.cpp  bench_no_regression.cpp  bench_observe_metrics_swmr.cpp  bench_perf_loader.cpp  bench_permissioned_calendar_grid.cpp  bench_permissioned_session_handle.cpp  bench_permissioned_zero_cost.cpp  bench_phases.cpp  bench_philox.cpp  bench_pipeline_dispatch.cpp  (+26 more)
bench/bpf/: common.h  sched_switch.bpf.c  sense_hub.bpf.c  syscall_tp_btf.bpf.c  vmlinux.h
examples/: CMakeLists.txt
examples/fixy/: CMakeLists.txt  example_fixy_bounded.cpp  example_fixy_cipher_writer.cpp  example_fixy_cntp_frame.cpp  example_fixy_cost_annotated.cpp  example_fixy_custom_kernel.cpp  example_fixy_custom_optimizer.cpp  example_fixy_forge_phase.cpp  example_fixy_mimic_backend_hook.cpp  example_fixy_modality_aware.cpp  example_fixy_seam_safety.cpp  example_fixy_stance_versioned.cpp  example_fixy_witness_evidenced.cpp
examples/fn/: CMakeLists.txt  example_cntp_frame.cpp  example_custom_kernel.cpp  example_custom_optimizer.cpp  example_forge_phase.cpp  example_mimic_backend_hook.cpp
fuzz/: CMakeLists.txt  README.md
fuzz/boundary/: fuzz_recipe_bytes.cpp  fuzz_serialize.cpp  runner_main.h
fuzz/property/: prop_arena_alloc_invariants.cpp  prop_callsite_table_dedup.cpp  prop_checked_arith.cpp  prop_compute_storage_nbytes_saturation.cpp  prop_content_hash_determinism.cpp  prop_content_hash_recipe_disambiguates.cpp  prop_crdt_counter.cpp  prop_crdt_gset.cpp  prop_crdt_mvregister.cpp  prop_crdt_orset.cpp  prop_crdt_rga.cpp  prop_crdt_rga_merge.cpp  prop_diff_reflect_vs_packed.cpp  prop_expr_pool_intern.cpp  prop_factorization_eq.cpp  prop_fractional_lattice.cpp  prop_guard_hash_invariants.cpp  prop_hash_determinism.cpp  prop_hash_distinct.cpp  prop_hdr_histogram_buckets.cpp  prop_header_roundtrip.cpp  prop_hlc_update.cpp  prop_integrity_xxhash.cpp  prop_intervals_cover_unit.cpp  prop_is_power_of_two_le.cpp  prop_iteration_detector.cpp  prop_kernel_cache_roundtrip.cpp  prop_memory_plan_no_overlap.cpp  prop_monotonic_predicates.cpp  prop_philox_determinism.cpp  prop_philox_simd_equivalence.cpp  prop_ptp_degradation.cpp  prop_recipe_hashed_idempotent.cpp  prop_recipe_pool_intern.cpp  prop_recipe_registry_roundtrip.cpp  prop_reflect_avalanche.cpp  prop_saturate_math_invariants.cpp  prop_scuttlebutt_compare.cpp  prop_scuttlebutt_digest.cpp  prop_sdc_tolerance.cpp  (+7 more)
test/: CMakeLists.txt  cpu_kernels.h  neg_compile_driver.py  test_adaptive_scheduler.cpp  test_algebra_compile.cpp  test_arena.cpp  test_arena_alloc_class.cpp  test_assert.h  test_asymmetric_failure.cpp  test_atomic_snapshot.cpp  test_atomic_snapshot_mem_order.cpp  test_atomic_snapshot_wait.cpp  test_augur_metrics_swmr.cpp  test_auto_router.cpp  test_auto_split.cpp  test_background_thread_run_in_row.cpp  test_bench_harness.cpp  test_binary_transform.cpp  test_bitmap_mpsc_ring.cpp  test_bridges_compile.cpp  test_calendar_grid_substrate_session_bridge.cpp  test_calibrate.cpp  test_call_site_table.cpp  test_canonical_order.cpp  test_canonical_shape.cpp  test_chainedge_session.cpp  test_chase_lev_deque.cpp  test_chaselev_deque_session.cpp  test_chaselev_substrate_session_bridge.cpp  test_cheat_probe_compile.cpp  test_cheat_probe_wrappers.cpp  test_checked.cpp  test_cipher.cpp  test_cipher_commit_lifetime.cpp  test_cipher_publish_tier.cpp  test_cipher_record_event.cpp  test_cipher_tier_promotion.cpp  test_cipher_wait.cpp  test_ckernel.cpp  test_cntp_af_xdp.cpp  (+447 more)
test/bridges_neg/: neg_crash_event_ctor_public_bypass.cpp  neg_crash_event_external_construction.cpp  neg_mint_atomic_session_malformed_proto.cpp  neg_mint_atomic_session_non_atomic_machine_cell.cpp  neg_mint_crash_watched_endpoint_missing_peer_tag.cpp  neg_mint_crash_watched_endpoint_non_endpoint.cpp  neg_mint_persisted_session_ctx_required.cpp  neg_mint_persisted_session_ctx_row_insufficient.cpp  neg_mint_persisted_session_handle_ctx_row_insufficient.cpp  neg_mint_persisted_session_handle_open_view_required.cpp  neg_mint_recording_endpoint_non_endpoint.cpp  neg_mint_recording_endpoint_wrong_log_type.cpp  neg_mint_recording_session_crash_watched_non_handle.cpp  neg_mint_recording_session_crash_watched_wrong_log_type.cpp  neg_mint_recording_session_non_handle.cpp  neg_mint_recording_session_psh_accept_transport_not_invocable.cpp  neg_mint_recording_session_psh_accept_transport_returns_void.cpp  neg_mint_recording_session_psh_delegate_transport_not_invocable.cpp  neg_mint_recording_session_psh_delegate_wrong_inner_proto.cpp  neg_mint_recording_session_psh_epoched_accept_transport_not_invocable.cpp  neg_mint_recording_session_psh_epoched_accept_transport_returns_void.cpp  neg_mint_recording_session_psh_epoched_delegate_transport_not_invocable.cpp  neg_mint_recording_session_psh_epoched_delegate_wrong_inner_proto.cpp  neg_mint_recording_session_wrong_log_type.cpp  neg_recording_psh_ctor_public_bypass.cpp  neg_recording_psh_offer_ctor_public_bypass.cpp  neg_vigil_mode_bridge_wrong_cell.cpp  neg_wrap_crash_return_key_copy_construct.cpp  neg_wrap_crash_return_key_external_construction.cpp  neg_wrap_crash_return_key_move_construct.cpp
test/cog_neg/: neg_calibrate_psu_rail.cpp  neg_cog_mimic_ctx_row_missing.cpp  (+19 more)
(+3289 files in other folders)
